添加dao类的返回值

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -92,4 +92,13 @@
         <servlet-name>handlebook</servlet-name>
         <url-pattern>/handlebook</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>uploadimg</servlet-name>
+        <servlet-class>server.uploadImg</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>uploadimg</servlet-name>
+        <url-pattern>/uploadimg</url-pattern>
+    </servlet-mapping>
 </web-app>
