--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -111,6 +111,18 @@
         <url-pattern>/webToWx</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>DisplayChart</servlet-name>
+        <servlet-class>
+            org.jfree.chart.servlet.DisplayChart
+        </servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DisplayChart</servlet-name>
+        <url-pattern>/servlet/DisplayChart</url-pattern>
+    </servlet-mapping>
+
+
     <listener>
         <listener-class>Listener.UserOnlineListener</listener-class>
     </listener>
